croatia-components-main@ce2ceb27993/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: argocd-2-12-3
  name: argocd-2-12-3
