croatia-components-main@ce2ceb27993/argocd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd
  namespace: argocd-2-12-3
spec:
  host: argocd-2-12-3.apps.dev-nonpci-shared.npnbank.local
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
